syntax = "proto3";

package match;

option go_package = "pkg/grpc";

enum GameType {
    KEY_COLLECTION = 0;
    POSITION_GAME = 1;
    BOMB_GAME = 2;
}

service MatchRoom {
    rpc Matching (MatchRequest) returns (stream MatchResponse);
    rpc KeyCollect (stream KeyCollectRequest) returns (stream KeyCollectResponse);
    rpc PositionGame (stream PositionGameRequest) returns (stream PositionGameResponse);
}

message MatchRequest {
    string player_id = 1;
    GameType game_type = 2;
}

message MatchResponse {
    string message = 1;
    string room_id = 2;
    string player_id = 3;
    GameType game_type = 4;
}

message KeyCollectRequest {
    string room_id = 1;
    string player_id = 2;
    int32 total_keys = 3;
}

message KeyCollectResponse {
    string message = 1;
    string room_id = 2;
    map<string, int32> player_keys = 3;
    bool is_game_over = 4;
    string result = 5;
}

message PositionGameRequest {
    string room_id = 1;
    string player_id = 2;
    int32 x = 3;
    int32 y = 4;
}

message PositionGameResponse {
    string message = 1;
    string room_id = 2;
    map<string, Position> player_positions = 3;
    bool is_game_over = 4;
    string result = 5;
}

message Position {
    int32 x = 1;
    int32 y = 2;
}